# nixpkgs-lint

./: .gitignore  Cargo.toml  LICENSE  default.nix  flake.nix  index.js  index.ts  package-lock.json  package.json  readme.md  release.sh  shell.nix  tsconfig.json  yarn.nix
.github/workflows/: test.yml
assets/: finalAttrs-pname.nix  optional_a_list.nix  pname.nix  semantic.nix  simple.nix  var.nix  xorg-package-set-attrs
assets/depth/: simple.nix
examples/: semantic.nix  syntax-error.nix
nix/: sources.json
src/: display.rs  find.rs  find_lints.rs  main.rs  queries.rs  query.rs
