[package]
name = "nixpkgs-lint"
description = "Semantic linter for Nixpkgs using tree-sitter"
version = "0.1.0"
edition = "2021"
authors = ["Artturin <Artturin@artturin.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.1.5"
clap = { version = "3", features = ["derive", "cargo"] }
indicatif = { version = "0.17.1", features = ["rayon"]}
predicates = "2.1.1"
rayon = "1.5.3"
serde = { version = "1.0.144", features = ["derive"]}
serde_json = "1.0.85"
tree-sitter = "0.20.9"
tree-sitter-nix = { git = "https://github.com/cstrahan/tree-sitter-nix", version = "0.0.1" }
tree-sitter-traversal = "0.1.2"
walkdir = "2.3.2"
