[package]
name = "nixpkgs-lint"
description = "Semantic linter for Nixpkgs using tree-sitter"
version = "0.3.0"
edition = "2021"
authors = ["Artturin <Artturin@artturin.com>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.2.0"
clap = { version = "4", features = ["derive", "cargo"] }
indicatif = { version = "0.17.7", features = ["rayon"]}
lazy_static = "1.4.0"
predicates = "3.0.4"
rayon = "1.8.0"
serde = { version = "1.0.188", features = ["derive"]}
serde_json = "1.0.107"
tree-sitter = "0.20.10"
tree-sitter-nix = "0.0.1"
tree-sitter-traversal = "0.1.2"
walkdir = "2.4.0"
